; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zfs_fm.c_zfs_event_create.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zfs_fm.c_zfs_event_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i8*, i8*, i32, i32 }

@FM_CLASS = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_POOL = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_POOL_CONTEXT = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_POOL_GUID = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_POOL_STATE = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_VDEV_DEVID = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_VDEV_ENC_SYSFS_PATH = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_VDEV_FRU = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_VDEV_GUID = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_VDEV_PATH = common dso_local global i32 0, align 4
@FM_EREPORT_PAYLOAD_ZFS_VDEV_STATE = common dso_local global i32 0, align 4
@FM_RSRC_VERSION = common dso_local global i32 0, align 4
@FM_VERSION = common dso_local global i32 0, align 4
@SPA_LOAD_TRYIMPORT = common dso_local global i64 0, align 8
@ZFS_ERROR_CLASS = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @zfs_event_create(i32* %0, %struct.TYPE_3__* %1, i8* %2, i8* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32* %4, i32** %10, align 8
  store i32* null, i32** %11, align 8
  %12 = load i32*, i32** %11, align 8
  ret i32* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
